--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/taifu.loader.js";
       var config = {
-        dataUrl: buildUrl + "/taifu.data.br",
-        frameworkUrl: buildUrl + "/taifu.framework.js.br",
-        codeUrl: buildUrl + "/taifu.wasm.br",
+        dataUrl: buildUrl + "/taifu.data",
+        frameworkUrl: buildUrl + "/taifu.framework.js",
+        codeUrl: buildUrl + "/taifu.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Taifu_game",
